<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:background="#000"
    android:orientation="vertical" 
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" 
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/play"
            style="@style/btn"
            android:contentDescription="@string/play"
            android:tag="play"
            android:src="@drawable/media_playback_start" />

        <ImageButton
            android:id="@+id/stop"
            style="@style/btn"
            android:contentDescription="@string/stop"
            android:tag="stop"
            android:src="@drawable/media_playback_stop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
		android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev"
            style="@style/btn"
            android:contentDescription="@string/prev"
            android:tag="prev"
            android:src="@drawable/media_skip_backward" />

        <ImageButton
            android:id="@+id/next"
            style="@style/btn"
            android:contentDescription="@string/next"
            android:tag="next"
            android:src="@drawable/media_skip_forward" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/seek_left"
            style="@style/btn"
            android:contentDescription="@string/seek_left"
            android:tag="sleft"
            android:src="@drawable/media_seek_backward" />

        <ImageButton
            android:id="@+id/seek_right"
            style="@style/btn"
            android:contentDescription="@string/seek_right"
            android:tag="srht"
            android:src="@drawable/media_seek_forward" />

    </LinearLayout>


</LinearLayout>